--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "BRECHAS DE INFLACION"
 author: "Martin Gonzalez-Rozada. <br> Director de la Maestría en Econometría del Departamento de Economía de la [Universidad Torcuato Di Tella](https://www.utdt.edu/)."
-date: "Agosto 2024"
+date: "Septiembre 2024"
 output: rmdformats::downcute
 ---
 
@@ -64,7 +64,6 @@ library("rmapshaper")
 
 
 ```
-
 
 
 ```{r excel, message=FALSE, echo=FALSE, include=FALSE}
@@ -208,6 +207,7 @@ colnames(cuadro1deciles) <- colnames1
 
 ```
 
+
 Este informe reporta las brechas de inflación entre los hogares de menores y mayores ingresos junto con la brecha en la inflación por regiones geográficas. 
 
 Es claro que controlar la inflación beneficia a todos los consumidores aunque, generalmente, existen diferencias entre la inflación que enfrentan los hogares de menores ingresos, que gastan la mayor parte de los mismos en alimentos y bebidas, y la que enfrentan los hogares de mayores ingresos que pueden diversificar su consumo. Esta heterogeneidad en las canastas de consumo es importante para la política económica, en particular la política monetaria. Los hogares de mayores ingresos, que tienen menores propensiones marginales a consumir, gastan más en sectores con mayores rigideces de precios. Debido a este hecho, la eficacia de la política monetaria se reduce en equilibrio general. 
@@ -216,7 +216,7 @@ Por otro lado, la brecha de inflación por regiones geográficas, si es sistemá
 
 # Inflación para hogares de mayores y menores ingresos
 
-La Figura 1 muestra la diferencia entre la inflación anual experimentada por el 20 por ciento de la población de menores ingresos y el 20 por ciento de mayores ingresos (medido por el ingreso familiar per capita del hogar). Durante el mes de `r meses[mes_t,1]`, el comportamiento de las tasas de inflación interanuales experimentadas por los hogares de mayores y menores ingresos mantuvo el mismo signo que en los últimos cuatro meses, y con una profundización de la diferencia. **Durante `r meses[mes_t,1]`, la brecha se ubicó en 4.9 puntos porcentuales en favor de los hogares de menores ingresos.** Este comportamiento se explica por los valores aún elevados de las tasas de inflación interanuales de las divisiones en las que los hogares de mayores ingresos consumen más, como Transporte, Salud, Restaurantes y hoteles y Equipamiento y mantenimiento del hogar, junto con las grandes reducciones en la tasa de inflación interanual en las divisiones en las que hogares de menores ingresos consumen más, como Alimentos y bebidas no alcohólicas.
+La Figura 1 muestra la diferencia entre la inflación anual experimentada por el 20 por ciento de la población de menores ingresos y el 20 por ciento de mayores ingresos (medido por el ingreso familiar per capita del hogar). Durante el mes de `r meses[mes_t,1]`, el comportamiento de las tasas de inflación interanuales experimentadas por los hogares de mayores y menores ingresos mantuvo el mismo signo que en los últimos cuatro meses, y con una profundización de la diferencia. **Durante `r meses[mes_t,1]`, la brecha se ubicó en -7.4 puntos porcentuales en favor de los hogares de menores ingresos.** Este comportamiento se explica por los valores aún elevados de las tasas de inflación interanuales de las divisiones en las que los hogares de mayores ingresos consumen más, como Transporte, Salud, Restaurantes y hoteles y Equipamiento y mantenimiento del hogar, combinado con un menor aumento en la tasa de inflación interanual de las divisiones en las que hogares de menores ingresos consumen más, como Alimentos y bebidas no alcohólicas y Prendas de vestir y calzado. 
 
 
 [**Figura 1. Diferencia entre la tasa de inflación interanual entre el 20% con menores ingresos y el 20% con mayores ingresos**]{style="color:#777;font-size:13    .0pt;"}
@@ -239,12 +239,12 @@ La Figura 1 muestra la diferencia entre la inflación anual experimentada por el
     scale_fill_manual(values=c("#9F2042", "#adcc78"), name="Diferencia") +
     theme_bw()
   g4
-  # ggplotly(g4)
+  #ggplotly(g4)
 ```
 
 <br>
 
-La Figura 2 muestra las diferencias entre las contribuciones a la tasa de inflación interanual de `r meses[mes_t,1]` del 20 por ciento de los hogares de menores y mayores ingresos. **La división de Alimentos y bebidas no alcohólicas contribuyó a incrementar más la inflación para los hogares de menores ingresos en comparación con los hogares de mayores ingresos.** En particular, esta división explicó más de 45 puntos porcentuales de la diferencia. En comparación, Transporte, Salud, y Restaurantes y hoteles fueron las divisiones que contribuyeron para aumentar más la tasa de inflación que enfrentó el grupo de hogares de mayores ingresos en comparación con los hogares de menores ingresos. Estas tres divisiones contribuyeron a reducir la brecha en la inflación enfrentada por los hogares de menores y mayores ingresos en alrededor de 35 puntos porcentuales. 
+La Figura 2 muestra las diferencias entre las contribuciones a la tasa de inflación interanual de `r meses[mes_t,1]` del 20 por ciento de los hogares de menores y mayores ingresos. **La división de Alimentos y bebidas no alcohólicas explicó casi completamente la parte que aumenta la brecha en la inflación para los hogares de menores ingresos en comparación con los hogares de mayores ingresos.** En particular, esta división explicó 38 puntos porcentuales de la diferencia.  En la comparación con otros meses, esta división suele explicar más del 50 por ciento de la diferencia. En la otra dirección, las divisiones que más contribuyeron a reducir la brecha fueron Transporte, Salud, y Restaurantes y hoteles, siendo que contribuyeron para aumentar más la tasa de inflación que enfrentó el grupo de hogares de mayores ingresos en comparación con los hogares de menores ingresos. Estas tres divisiones contribuyeron a reducir la brecha en la inflación enfrentada por los hogares de menores y mayores ingresos en 31.7 puntos porcentuales. 
 
 <br>
 
@@ -264,7 +264,6 @@ La Figura 2 muestra las diferencias entre las contribuciones a la tasa de inflac
     theme_bw() +
     coord_flip() 
   ggplotly(g5)
-  # g5
   
   
 ```
@@ -272,7 +271,7 @@ La Figura 2 muestra las diferencias entre las contribuciones a la tasa de inflac
 <br>
 
 
-El Cuadro 1 muestra el impacto diferencial de la inflación por quintiles de ingreso per cápita familiar. **Los hogares de menores ingresos, quintil 1, enfrentaron en `r meses[mes_t,1]` una inflación de `r sprintf("%.2f",cuadro4[1,3])` por ciento comparada con una inflación de `r sprintf("%.2f",cuadro4[5,3])` por ciento para los hogares del 20 por ciento de mayores ingresos** (ver Figura 3). Esta diferencia se debe al aumento de los precios de las divisiones de Restaurantes y hoteles, Transporte y Salud  que impactan en mayor medida en los hogares de mayores ingresos (quintil 5), que no llegan a ser contrarrestados por los aumentos relativos de los precios de las divisiones de Alimentos y bebidas no alcohólicas y Prendas de vestir y calzado, que impactan más en los hogares de menores ingresos (quintil 5).
+El Cuadro 1 muestra el impacto diferencial de la inflación por quintiles de ingreso per cápita familiar. **Los hogares de menores ingresos, quintil 1, enfrentaron en `r meses[mes_t,1]` una inflación de `r sprintf("%.2f",cuadro4[1,3])` por ciento comparada con una inflación de `r sprintf("%.2f",cuadro4[5,3])` por ciento para los hogares del 20 por ciento de mayores ingresos** (ver Figura 3). Esta diferencia se debe al aumento de los precios de las divisiones de Transporte, Restaurantes y hoteles y Salud, que impactan en mayor medida en los hogares de mayores ingresos (quintil 5), combinado con menores aumentos de los índices de precios de las divisiones de Alimentos y bebidas no alcohólicas y Prendas de vestir y calzado, que impactan más en los hogares de menores ingresos (quintil 5).
 
 <br>
 
@@ -284,6 +283,7 @@ cuadro4 %>%
   kable(digits=2, col.names = NULL,align = c("r","c","c","c")) %>%
   add_header_above(c(".", "Quintil", "Mensual", "Interanual")) %>%
   kable_styling() 
+
 
 ```
 
@@ -305,7 +305,6 @@ cuadro4 %>%
     theme_bw() +
     labs(y="Tasa de inflación mensual", x=" ")
   ggplotly(g5)
-  # g5
   
 ```
 
@@ -328,9 +327,9 @@ cuadro1deciles %>%
 
 <br>
 
-La figura 4 muestra la diferencia entre la tasa de inflación interanual, nivel general y núcleo, experimentada por los hogares del decil 1 (muy bajos ingresos) y por los hogares del decil 10 (muy altos ingresos) desde 2017 en adelante. Un valor positivo indica que los hogares de menores ingresos experimentaron una inflación interanual mayor que la enfrentada por los hogares de mayores ingresos. Como se puede observar en la figura  la brecha de inflación por deciles de ingreso tiene menor volatilidad para la inflación núcleo que para el nivel general. Observando el comportamiento de esta brecha para la inflación núcleo (excluye bienes y servicios cuyos precios están sujetos a regulación o tienen alto componente impositivo -combustibles para la vivienda, electricidad, agua y servicios sanitarios, sistemas de salud y servicios auxiliares, transporte público de pasajeros, funcionamiento y mantenimiento de vehículos, correo, teléfono, educación formal y cigarrillos y accesorios- y aquellos con comportamiento estacional -frutas, verduras, ropa exterior, transporte por turismo y alojamiento y excursiones-) se pueden identificar tres períodos temporales. Hasta fines del 2021 la brecha es positiva indicando que la inflación que enfrentaron los hogares de menores ingresos fue mayor a la que enfrentaron los hogares de mayores ingresos. A partir de 2022 la brecha se vuelve negativa hasta agosto de 2023 y regresa a valores positivos a partir de septiembre de 2023 hasta febrero de 2024. **A partir de marzo del corriente año la brecha de inflación entre el decil 1 (menores ingresos) y el decil 10 (mayores ingresos) es negativa alcanzando -4.92 puntos porcentuales en el mes de `r meses[mes_t,1]`** 
+La figura 4 muestra la diferencia entre la tasa de inflación interanual, nivel general y núcleo, experimentada por los hogares del decil 1 (muy bajos ingresos) y por los hogares del decil 10 (muy altos ingresos) desde 2017 en adelante. Un valor positivo indica que los hogares de menores ingresos experimentaron una inflación interanual mayor que la enfrentada por los hogares de mayores ingresos. Como se puede observar en la figura  la brecha de inflación por deciles de ingreso tiene menor volatilidad para la inflación núcleo que para el nivel general. Observando el comportamiento de esta brecha para la inflación núcleo (excluye bienes y servicios cuyos precios están sujetos a regulación o tienen alto componente impositivo -combustibles para la vivienda, electricidad, agua y servicios sanitarios, sistemas de salud y servicios auxiliares, transporte público de pasajeros, funcionamiento y mantenimiento de vehículos, correo, teléfono, educación formal y cigarrillos y accesorios- y aquellos con comportamiento estacional -frutas, verduras, ropa exterior, transporte por turismo y alojamiento y excursiones-) se pueden identificar tres períodos temporales. Hasta fines del 2021 la brecha es positiva indicando que la inflación que enfrentaron los hogares de menores ingresos fue mayor a la que enfrentaron los hogares de mayores ingresos. A partir de 2022 la brecha se vuelve negativa hasta agosto de 2023 y regresa a valores positivos a partir de septiembre de 2023 hasta febrero de 2024. **A partir de marzo del corriente año la brecha de inflación entre el decil 1 (menores ingresos) y el decil 10 (mayores ingresos) es negativa alcanzando -5.74 puntos porcentuales en el mes de `r meses[mes_t,1]`** 
 
-En líneas generales y a pesar de la mayor volatilidad, la brecha de inflación por deciles de ingreso medida con el nivel general tiene una evolución similar salvo por el período que va desde febrero de 2022 hasta julio de 2023 cuando la brecha de inflación medida para la núcleo es negativa mientras que medida por el nivel general es positiva. **En junio y julio la brecha de inflación interanual entre el decil 1 y el decil 10 volvió a ser positiva llegando a 1.17 puntos porcentuales en julio para hacerce negativa con un valor de -1.53 puntos porcentuales en agosto.** Esto indica que los hogares de muy bajos ingresos enfrentaron una inflación menor a la que enfrentaron los hogares de muy altos ingresos en el mes de `r meses[mes_t,1]`.   
+En líneas generales y a pesar de la mayor volatilidad, la brecha de inflación por deciles de ingreso medida con el nivel general tiene una evolución similar salvo por el período que va desde febrero de 2022 hasta julio de 2023 cuando la brecha de inflación medida para la núcleo es negativa mientras que medida por el nivel general es positiva. **En junio y julio la brecha de inflación interanual entre el decil 1 y el decil 10 volvió a ser positiva llegando a 1.17 puntos porcentuales en julio. A partir de agosto se vuelve negativa y alcanza un valor de -3.81 puntos porcentuales en `r meses[mes_t,1]`.** Esto indica que los hogares de muy bajos ingresos enfrentaron una inflación menor a la que enfrentaron los hogares de muy altos ingresos en el mes de `r meses[mes_t,1]`.   
 
 [**Figura 4. Diferencia en las tasas de inflación _interanual_ experimentadas por el decil 1 y el decil 10**]{style="color:#777;font-size:13    .0pt;"}
 
@@ -362,7 +361,6 @@ f4 <- ggplot(data = ggdataf4, aes(Diferencia)) +
     subtitle = "Diferencia entre las tasas de inflación del decil 1 y del decil 10"
   )
 
-# f4
 ggplotly(f4) %>% layout(yaxis = list(hoverformat = '.2f'))
 
 ```
@@ -410,7 +408,7 @@ ggplotly(f9) %>% layout(yaxis = list(hoverformat = '.2f'))
 
 ```
 
-En general, no hay nada especial o estructural en las canastas de consumo de los hogares de menores ingresos pero si hay fuertes razones para pensar que los factores estructurales (costos de transporte, regulaciones provinciales, etc.) desempeñan un papel clave a la hora de distinguir la inflación por regiones. Con esto en mente, el mapa muestra los valores de inflación acumulada en cada región del país desde diciembre de 2016. Colores más claros indican mayor inflación acumulada y colores más oscuros muestran mayor inflación acumulada. **Hasta `r meses[mes_t,1]`  de `r year_t`, la región que más inflación acumuló fue la región Cuyo con 7075.5 por ciento, mientras que la región que menos inflación acumuló fue la región Patagonia con 6797.1 por ciento.** La brecha de inflación entre estas dos regiones supera los 270 puntos porcentuales. En el mismo período de tiempo la inflación aumulada medida por el IPC nivel general fue de 6883.4 por ciento. 
+En general, no hay nada especial o estructural en las canastas de consumo de los hogares de menores ingresos pero si hay fuertes razones para pensar que los factores estructurales (costos de transporte, regulaciones provinciales, etc.) desempeñan un papel clave a la hora de distinguir la inflación por regiones. Con esto en mente, el mapa muestra los valores de inflación acumulada en cada región del país desde diciembre de 2016. Colores más claros indican mayor inflación acumulada y colores más oscuros muestran mayor inflación acumulada. **Hasta `r meses[mes_t,1]`  de `r year_t`, la región que más inflación acumuló fue la región Cuyo con 7290.0 por ciento, mientras que la región que menos inflación acumuló fue la región Patagonia con 7050.4 por ciento.** La brecha de inflación entre estas dos regiones supera los 230 puntos porcentuales. En el mismo período de tiempo la inflación aumulada medida por el IPC nivel general fue de 7122.2 por ciento. 
 
 [**Figura 6. Nivel de precios acumulado desde diciembre de 2016 en cada región**]{style="color:#777;font-size:13    .0pt;"}
 
@@ -436,7 +434,7 @@ map_f10 <- leaflet(ar_regiones_gba_data) %>%
   addPolygons(color = ~palette_f10(f10value), weight = 1, opacity = 1, fillOpacity = 0.5,
               highlightOptions = highlightOptions(color = "white", weight = 2, bringToFront = TRUE),
               label =  ~lapply(paste("Región:", region, "<br>", "Valor:", sprintf("%.1f",f10value)), HTML)) %>%
-  setView(lng = -62.0, lat = -38.0, zoom = 4) %>%
+  setView(lng = -62.0, lat = -37.0, zoom = 4) %>%
   addScaleBar(position = "bottomleft") %>%
   addLegend(pal = palette_f10, values = ~f10value, position = "bottomright", title = "100 = Dic. 2016") 
 
@@ -448,7 +446,7 @@ htmltools::browsable(tagList(
 
 ```
 
-Después de la pandemia de COVID-19 la dinámica de la inflación por regiones geográficas parece haber cambiado. El siguiente mapa muestra los valores de inflación acumulada en cada región del país desde febrero de 2021. Hasta `r meses[mes_t,1]`  de `r year_t`, la región que más inflación acumuló fue la región Gran Buenos Aires, mientras que la región que menos inflación acumuló fue la región Noreste. En el Gran Buenos Aires el nivel general de precios acumulado fue de 1690.9 por ciento mientras que en la región Noreste fue de 1590.0 por ciento (Figura 7).
+Después de la pandemia de COVID-19 la dinámica de la inflación por regiones geográficas parece haber cambiado. El siguiente mapa muestra los valores de inflación acumulada en cada región del país desde febrero de 2021. Hasta `r meses[mes_t,1]`  de `r year_t`, la región que más inflación acumuló fue la región Gran Buenos Aires, mientras que la región que menos inflación acumuló fue la región Noreste. En el Gran Buenos Aires el nivel general de precios acumulado fue de 1753.7 por ciento mientras que en la región Noreste fue de 1641.9 por ciento (Figura 7).
 
 [**Figura 7. Nivel de precios acumulado desde febrero de 2021 en cada región**]{style="color:#777;font-size:13    .0pt;"}
 
@@ -466,7 +464,7 @@ map_f12 <- leaflet(ar_regiones_gba_data) %>%
   addPolygons(color = ~palette_f12(f12value), weight = 1, opacity = 1, fillOpacity = 0.5,
               highlightOptions = highlightOptions(color = "white", weight = 2, bringToFront = TRUE),
               label =  ~lapply(paste("Región:", region, "<br>", "Valor:", sprintf("%.1f",f12value)), HTML)) %>%
-  setView(lng = -62.0, lat = -37.0, zoom = 4) %>%
+  setView(lng = -62.0, lat = -34.0, zoom = 5) %>%
   addScaleBar(position = "bottomleft") %>%
   addLegend(pal = palette_f12, values = ~f12value, position = "bottomright", title = "100 = Feb. 2021") 
 
@@ -478,7 +476,7 @@ htmltools::browsable(tagList(
 ```
 
 
-Tomando en cuenta la evolución de la inflación desde 2017, la brecha de inflación geográfica se definió como el cociente entre los índices de precios para las regiones Cuyo (menor inflación acumulada) y Patagonia (mayor inflación acumulada). La Figura 8 muestra la brecha de inflación geografica calculada de esta manera comparada con la brecha de inflación por deciles de ingreso calculada como el cociente del índice de precios para el decil más bajo (decil 1) contra el índice de precios del decil más alto (decil 10). El panel de la izquierda muestra la comparación utilizando el nivel general y el de la derecha usa la inflación núcleo. Como se observa en el panel de la izquierda, salvo en los primeros meses de 2017 la magnitud de la brecha geográfica es siempre mayor a la brecha de inflación acumulada por deciles de ingreso. En el mes de `r meses[mes_t,1]` la brecha de inflación geográfica es 3 puntos porcentuales más grande que la brecha por deciles de ingreso. El panel de la derecha muestra un panorama similar para estas brechas calculadas para la inflación núcleo. Se observa una mayor volatilidad en la brecha por regiones geográficas comparada con la volatilidad calculada con el nivel general de la inflación pero al igual que con este caso la brech por deciles de ingreso es más baja que la regional. En `r meses[mes_t,1]` la brecha de inflación por regiones geográficas es alrededor de 5 puntos porcentuales más grande que la brecha por deciles de ingreso. 
+Tomando en cuenta la evolución de la inflación desde 2017, la brecha de inflación geográfica se definió como el cociente entre los índices de precios para las regiones Cuyo (menor inflación acumulada) y Patagonia (mayor inflación acumulada). La Figura 8 muestra la brecha de inflación geografica calculada de esta manera comparada con la brecha de inflación por deciles de ingreso calculada como el cociente del índice de precios para el decil más bajo (decil 1) contra el índice de precios del decil más alto (decil 10). El panel de la izquierda muestra la comparación utilizando el nivel general y el de la derecha usa la inflación núcleo. Como se observa en el panel de la izquierda, salvo en los primeros meses de 2017 la magnitud de la brecha geográfica es siempre mayor a la brecha de inflación acumulada por deciles de ingreso. En el mes de `r meses[mes_t,1]` la brecha de inflación geográfica es 2.4 puntos porcentuales más grande que la brecha por deciles de ingreso. El panel de la derecha muestra un panorama similar para estas brechas calculadas para la inflación núcleo. Se observa una mayor volatilidad en la brecha por regiones geográficas comparada con la volatilidad calculada con el nivel general de la inflación pero al igual que con este caso la brech por deciles de ingreso es más baja que la regional. En `r meses[mes_t,1]` la brecha de inflación por regiones geográficas es alrededor de 5 puntos porcentuales más grande que la brecha por deciles de ingreso. 
 
 
 ```{r f17, message=FALSE, echo=FALSE, fig.dim = c(12, 6.75), warning=FALSE}
@@ -581,7 +579,7 @@ fig
 
 ## Desigualdad intra-región
 
-La Figura 9 muestra la brecha de inflación interanual por deciles de ingreso desde 2016 en el panel de la izquierda y desde 2021 en el panel de la derecha para las diferentes regiones del país. Esto es el promedio de la diferencia entre la inflación interanual que enfrentaron los hogares del decil 1 (muy bajos ingresos) y la inflación interanual que enfrentaron los hogares del decil 10 (muy altos ingresos). Un valor positivo indica que la inflación interanual que enfrentaron los hogares de muy bajos ingresos fue mayor a la que enfrentaron los hogares de muy altos ingresos. Ambos paneles cuentan la misma historia, la brecha de inflación por deciles de ingreso es positiva tanto desde 2016 como desde 2021. Sin embargo, las regiones con mayor y menor brecha cambian. El panel de la izquierda muestra que la brecha de inflación por deciles de ingreso fue más alta en la región Noroeste alcanzando casi 1 punto porcentual y fue más baja en la región Noreste con una brecha de casi 0.4 puntos porcentuales. Si tomamos la brecha desde 2021, panel derecho de la figura, en un extremo se encuentra la región Patagonia con una brecha por deciles de 1.47 puntos porcentiales y en el otro la región Noreste donde la brecha fue solo de 0.14 puntos porcentuales.
+La Figura 9 muestra la brecha de inflación interanual por deciles de ingreso desde 2016 en el panel de la izquierda y desde 2021 en el panel de la derecha para las diferentes regiones del país. Esto es el promedio de la diferencia entre la inflación interanual que enfrentaron los hogares del decil 1 (muy bajos ingresos) y la inflación interanual que enfrentaron los hogares del decil 10 (muy altos ingresos). Un valor positivo indica que la inflación interanual que enfrentaron los hogares de muy bajos ingresos fue mayor a la que enfrentaron los hogares de muy altos ingresos. Ambos paneles cuentan la misma historia, la brecha de inflación por deciles de ingreso es positiva tanto desde 2016 como desde 2021. Sin embargo, las regiones con mayor y menor brecha cambian. El panel de la izquierda muestra que la brecha de inflación por deciles de ingreso fue más alta en la región Noroeste alcanzando casi 1 punto porcentual y fue más baja en la región Noreste con una brecha de casi 0.3 puntos porcentuales. Si tomamos la brecha desde 2021, panel derecho de la figura, en un extremo se encuentra la región Patagonia con una brecha por deciles de 1.44 puntos porcentuales y en el otro la región Noreste donde la brecha fue casi nula (-0.002 puntos porcentuales).
 
 
 
@@ -619,7 +617,7 @@ map19a <- leaflet(ar_regiones_gba_within) %>%
   addPolygons(color = ~palette_f19a(f19yoyprom16), weight = 1, opacity = 1, fillOpacity = 0.5,
               highlightOptions = highlightOptions(color = "white", weight = 2, bringToFront = TRUE),
               label =  ~lapply(paste("Región:", region, "<br>", "Valor:", sprintf("%.3f",f19yoyprom16)), HTML)) %>%
-  setView(lng = -62.0, lat = -37.0, zoom = 4) %>%
+  setView(lng = -62.0, lat = -34.0, zoom = 5) %>%
   addScaleBar(position = "bottomleft") %>%
   addLegend(pal = palette_f19a, values = ~f19yoyprom16, position = "bottomright", title = "Dif. YoY")
 
@@ -628,7 +626,7 @@ map19b <- leaflet(ar_regiones_gba_within) %>%
   addPolygons(color = ~palette_f19b(f19yoyprom21), weight = 1, opacity = 1, fillOpacity = 0.5,
               highlightOptions = highlightOptions(color = "white", weight = 2, bringToFront = TRUE),
               label =  ~lapply(paste("Región:", region, "<br>", "Valor:", sprintf("%.3f",f19yoyprom21)), HTML)) %>%
-  setView(lng = -62.0, lat = -37.0, zoom = 4) %>%
+  setView(lng = -62.0, lat = -34.0, zoom = 5) %>%
   addScaleBar(position = "bottomleft") %>%
   addLegend(pal = palette_f19b, values = ~f19yoyprom21, position = "bottomright", title = "Dif. YoY")
 
@@ -647,7 +645,7 @@ browsable(
 
 <br>
 
-Si en lugar de trabajar con la inflación interanual consideramos la inflación acumulada desde 2016 o desde 2021 tenemos la misma historia. La Figura 10 muestra que la brecha promedio de inflación acumulada entre el decil 1 y el decil 10 fue positiva indicando que los hogares de muy bajos ingresos enfrentaron una inflación acumulada mayor que los hogares de muy altos ingresos, tanto desde 2016 como desde 2021. Igual que con la inflación interanual la mayor brecha entre el decil 1 y el decil 10 se dió en la región Noroeste si miramos desde 2016 y la región Patagonia si la miramos desde 2021.
+La Figura 10 muestra que la brecha de inflación acumulada entre el decil 1 y el decil 10. Si consideramos esta brecha desde 2016, panel de la izquierda, se puede ver que los hogares de muy bajos ingresos enfrentaron una inflación acumulada mayor que los hogares de muy altos ingresos en todas lasregiones del país. En la región del GBA es donde la brecha fue mayor alcanzando 93 puntos porcentuales mientras que la menor brecha de dió en la región de Cuyo con casi 34 puntos porcentuales. La situación cambia si se considera esta brecha desde 2021 porque las únicas dos regiones del país donde la brecha resulta positiva son GBA y Noroeste. En el resto de las regiones del país los hogares de muy altos ingresos enfrentaron una inflación mayor que los hogares de muy bajos ingresos.
 
 
 
@@ -660,7 +658,7 @@ map19c <- leaflet(ar_regiones_gba_within) %>%
   addPolygons(color = ~palette_f19c(f19acum16), weight = 1, opacity = 1, fillOpacity = 0.5,
               highlightOptions = highlightOptions(color = "white", weight = 2, bringToFront = TRUE),
               label =  ~lapply(paste("Región:", region, "<br>", "Valor:", sprintf("%.3f",f19acum16)), HTML)) %>%
-  setView(lng = -62.0, lat = -37.0, zoom = 4) %>%
+  setView(lng = -62.0, lat = -34.0, zoom = 5) %>%
   addScaleBar(position = "bottomleft") %>%
   addLegend(pal = palette_f19c, values = ~f19acum16, position = "bottomright", title = "Dif. Acum.")
 
@@ -669,7 +667,7 @@ map19d <- leaflet(ar_regiones_gba_within) %>%
   addPolygons(color = ~palette_f19d(f19acum21), weight = 1, opacity = 1, fillOpacity = 0.5,
               highlightOptions = highlightOptions(color = "white", weight = 2, bringToFront = TRUE),
               label =  ~lapply(paste("Región:", region, "<br>", "Valor:", sprintf("%.3f",f19acum21)), HTML)) %>%
-  setView(lng = -62.0, lat = -37.0, zoom = 4) %>%
+  setView(lng = -62.0, lat = -34.0, zoom = 5) %>%
   addScaleBar(position = "bottomleft") %>%
   addLegend(pal = palette_f19d, values = ~f19acum21, position = "bottomright", title = "Dif. Acum.")
 
@@ -677,10 +675,10 @@ browsable(
   tagList(
     tags$div(style = "display: inline-block; width: 49%;",
              tags$h3("Desde diciembre de 2016"), # Title for the first map
-             map19a),
+             map19c),
     tags$div(style = "display: inline-block; width: 49%;",
              tags$h3("Desde febrero de 2021"), # Title for the second map
-             map19b)
+             map19d)
   )
 )
 ```
@@ -688,7 +686,7 @@ browsable(
 
 <br>
 
-La Figura 11 muestra el impacto diferencial de la inflación interanual por deciles de ingreso per cápita familiar para las diferentes regiones del país en `r meses[mes_t,1]` de 2024. Como se observa la brecha de inflación por deciles de ingreso es heterogénea entre regiones. En la región Patagonia los hogares de muy bajos ingresos enfrentaron una inflación 4.1 puntos porcentuales más alta que los hogares de muy altos ingresos, en la región Noroeste enfrentaron una inflación interanual 7.5 puntos porcentuales más baja. En el total del país, estos hogares de bajos ingresos enfrentaron una inflación  `r sprintf("%.2f",cuadro1deciles[12,4])` puntos porcentuales más baja que los hogares de muy altos ingresos, como se reporta en el Cuadro 2.
+La Figura 11 muestra el impacto diferencial de la inflación interanual por deciles de ingreso per cápita familiar para las diferentes regiones del país en `r meses[mes_t,1]` de 2024. Como se observa la brecha de inflación por deciles de ingreso es positiva solo en la región Patagonia. En el resto de las regiones los hogares de muy bajos ingresos enfrentaron una inflación que va desde 2.3 puntos porcentuales más baja que los hogares de muy altos ingresos en la región del GBA, hasta 9.5 puntos porcentuales más baja en la región Noroeste. En el total del país, estos hogares de bajos ingresos enfrentaron una inflación  `r sprintf("%.2f",cuadro1deciles[12,4])` puntos porcentuales más baja que los hogares de muy altos ingresos, como se reporta en el Cuadro 2.
 
 [**Figura 11. Brecha de inflación por región en el último mes**]{style="color:#777;font-size:13    .0pt;"}
 
@@ -706,7 +704,7 @@ map_f19e <-  leaflet(ar_regiones_gba_within) %>%
   addPolygons(color = ~palette_f19e(d1d10yoyxregion), weight = 1, opacity = 1, fillOpacity = 0.5,
               highlightOptions = highlightOptions(color = "white", weight = 2, bringToFront = TRUE),
               label =  ~lapply(paste("Región:", region, "<br>", "Valor:", sprintf("%.3f",d1d10yoyxregion)), HTML)) %>%
-  setView(lng = -62.0, lat = -37.0, zoom = 4) %>%
+  setView(lng = -62.0, lat = -34.0, zoom = 5) %>%
   addScaleBar(position = "bottomleft") %>%
   addLegend(pal = palette_f19e, values = ~d1d10yoyxregion, position = "bottomright", title = "Dif. YoY")
 
